FinTech-Web-App/Infra/alb-ingress-controller.yaml
#Not needed if it is implemented in each service 

#ALB Ingress is not mandatory if API Gateway is your entry point
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  namespace: fintech
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<region>:<account-id>:certificate/<cert-id>
    alb.ingress.kubernetes.io/security-groups: sg-xxxxxxxx
    alb.ingress.kubernetes.io/subnets: subnet-aaaaaaa,subnet-bbbbbbb
spec:
  rules:
    - http:
        paths:
          - path: /api/employees
            pathType: Prefix
            backend:
              service:
                name: employee-service
                port:
                  number: 80
          - path: /api/departments
            pathType: Prefix
            backend:
              service:
                name: department-service
                port:
                  number: 80
